<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenBgColor"
        android:orientation="vertical"
        android:weightSum="6"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/vertical_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="350dp"
                android:layout_height="200dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_fileName="confuse.json"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtForgetPassword"
                android:textSize="@dimen/txtForgetSize"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_email_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtEmailInstruction"
                android:textStyle="normal"
                android:textSize="@dimen/txtEmailSettingSize"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2.1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtTxtForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:background="@drawable/custom_rounded_edit_text"
                android:textColorHint="@color/hintColorEditText"
                android:lines="1"
                android:paddingLeft="@dimen/editTextPadding"
                android:paddingBottom="@dimen/editTextPadding"
                android:hint="@string/txtHintEmail"
                android:layout_gravity="left"/>

            <Button
                android:id="@+id/btnSetHeight"
                android:layout_width="@dimen/btnForgetWidth"
                android:layout_height="0dp"
                android:background="@drawable/my_button"
                android:layout_weight="0.2"
                android:text="@string/btnSend"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:textColor="@color/btnTextColor"
                android:textSize="@dimen/txtEmailSettingSize"
                android:textStyle="bold"
                />




            <Button
                android:id="@+id/btnForgetPassword"
                android:layout_width="@dimen/btnForgetWidth"
                android:layout_height="0dp"
                android:background="@drawable/my_button"
                android:backgroundTint="@color/btn_background"
                android:layout_weight="0.8"
                android:text="@string/btnSend"
                android:layout_gravity="center"
                android:textColor="@color/btnTextColor"
                android:textSize="@dimen/txtEmailSettingSize"
                android:textStyle="bold"
                />


        </LinearLayout>


    </LinearLayout>








</ScrollView>