<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/screenBgColor"
        android:paddingLeft="@dimen/vertical_padding"
        android:paddingRight="@dimen/vertical_padding"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/lottie_image_width"
                android:layout_height="@dimen/lottie_image_height"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_fileName="padlock_tick.json"/>

          <!--  <ImageView
                android:layout_width="@dimen/lottie_image_width"
                android:layout_height="@dimen/lottie_image_height"
                android:src="@drawable/ic_key"
                android:background="@drawable/ic_key"
                android:scaleType="fitXY"
                android:foreground="@drawable/ic_resetpassword"
                android:adjustViewBounds="true"
                android:foregroundTint="@color/colorWhite"
                android:foregroundGravity="center"
                />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7"
            android:weightSum="0.7"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtResetPassword"
                android:textSize="@dimen/txtForgetSize"
                android:textStyle="bold"
                android:layout_weight="0.4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtResetDesc"
                android:layout_weight="0.3"
                android:textAlignment="center"
                android:textSize="@dimen/txtEmailSettingSize"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2.5"
            android:weightSum="2.5">
            <EditText
                android:id="@+id/edtTxtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@drawable/custom_rounded_edit_text"
                android:textColorHint="@color/hintColorEditText"
                android:lines="1"
                android:inputType="text"
                android:paddingLeft="@dimen/editTextPadding"

                android:autoSizeTextType="uniform"
                android:hint="@string/txtHintNewPassword"
                android:layout_gravity="left"/>
            <EditText
                android:id="@+id/edtTxthide"
                android:layout_width="350dp"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:visibility="invisible"
                android:background="@drawable/custom_rounded_edit_text"
                android:textColorHint="@color/hintColorEditText"
                android:inputType="text"
                android:paddingLeft="@dimen/editTextPadding"

                android:autoSizeTextType="uniform"
                android:hint="@string/txtHintNewPassword"
                android:layout_gravity="left"/>



            <EditText
                android:id="@+id/edtTxtConfirmPassword"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_weight="0.6"
                android:layout_height="0dp"
                android:background="@drawable/custom_rounded_edit_text"
                android:textColorHint="@color/hintColorEditText"
                android:lines="1"
                android:paddingLeft="@dimen/editTextPadding"
                android:autoSizeTextType="uniform"
                android:hint="@string/txtHintConfirmPassword"
                android:layout_gravity="left"/>

            <Button
                android:id="@+id/btnHide"
                android:layout_width="350dp"
                android:layout_height="0dp"
                android:visibility="invisible"
                android:background="@drawable/my_button"
                android:backgroundTint="@color/btn_background"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:textColor="@color/btnTextColor"
                android:textSize="@dimen/txtEmailSettingSize"
                android:textStyle="bold"/>


            <Button
                android:id="@+id/btnResetDone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/my_button"
                android:backgroundTint="@color/btn_background"
                android:layout_weight="0.6"
                android:text="@string/btnResetDone"
                android:layout_gravity="center"
                android:textColor="@color/btnTextColor"
                android:textSize="@dimen/txtEmailSettingSize"
                android:textStyle="bold"/>
        </LinearLayout>



    </LinearLayout>


</ScrollView>